[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/logo.png" type="Texture" id=2]
[ext_resource path="res://galagaTheme.tres" type="Theme" id=3]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -168.0
margin_right = 64.0
margin_bottom = -40.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 128.0
margin_bottom = 24.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresButton" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 56.0
theme = SubResource( 1 )
text = "High Scores"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 88.0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 128.0
margin_bottom = 120.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 96.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
